<resources>
    <string name="app_name">Capfits</string>

    <!-- AUTH -->
    <string name="login_title">Selamat datang di Capfits</string>
    <string name="login_subtitle">Masuk untuk melanjutkan</string>
    <string name="daftar_title">Buat akunmu</string>
    <string name="daftar_subtitle">Mulai jelajahi trend outfit terkini</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="login_account">Belum punya akun?&#160;</string>
    <string name="daftar_account">Sudah punya akun?&#160;</string>
    <string name="daftar">Daftar</string>
    <string name="login">Masuk</string>

    <!-- VALIDATION -->
    <string name="empty_password">Password cannot be empty</string>
    <string name="incorrect_password">Password must be at least 6 character in length</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="incorrect_email">Incorrect email format</string>

    <!-- NAVIGATION -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_capfits">Capfits</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="title_profil">Profil</string>

    <!-- HOME -->
    <string name="search">Cari outfit</string>
    <string name="title_kategori">Kategori</string>
    <string name="title_fashionista">Pilihan dari fashionista favoritmu</string>
    <string name="see_more">Lihat lainnya</string>
    <string name="title_populer">Populer saat ini</string>
    <string name="title_style">Temukan style yang kamu sukai</string>
    <string name="title_faq">FAQ</string>

    <!-- CATEGORY -->
    <string name="kat_prom">Prom</string>
    <string name="kat_wedding">Wedding</string>
    <string name="kat_graduation">Graduation</string>
    <string name="kat_wfh">WFH</string>
    <string name="kat_weekend">Weekend</string>
    <string name="kat_staycation">Staycation</string>

    <!-- STYLE -->
    <string name="style_vintage">Vintage</string>
    <string name="style_casual">Casual</string>
    <string name="style_feminine">Feminine</string>
    <string name="style_classic">Classic</string>

    <!-- USER -->
    <string name="user1">Haylie Lipshutz</string>
    <string name="user2">Shilta Inda</string>
    <string name="user3">Maren Lubin</string>
    <string name="user4">Alena Korsgaard</string>

    <!-- DETAIL KATEGORI -->
    <string name="wedding">Wedding</string>

    <!-- RESULT -->
    <string name="more_like">More like this</string>
    <string name="title_result">Result</string>

    <!-- DETAIL PRODUCT -->
    <string name="lokasi">Denpasar</string>
    <string name="lihat_lain">Lihat item lainnya</string>
    <string name="desc">Description</string>
    <string name="isi_desc">Fresh and floaty, our Eve bridal dress is adorned with delicate embellishments, making your special day even more perfect. The beautiful yet subtle flare on her skirt should skim the floor as you glide down the aisle, and can be altered by a seamstress for the perfect length.</string>
    <string name="detail">Detail Produk</string>
    <string name="isi_detail1"># Outer. 100% Recycled Polyester Lining. 100% Recycled Polyester</string>
    <string name="isi_detail2"># Machine Wash</string>
    <string name="isi_detail3"># Recycled Polyester</string>
    <string name="isi_detail4"># Zip Fastening</string>
    <string name="size_guide">Size Guide</string>
    <string name="dapat_disewa">Dapat Disewa</string>
    <string name="harga">Rp 2,000,0000</string>
    <string name="btn_keranjang">+ Keranjang</string>

    <!-- DETAIL PRODUCT TABLE -->
    <string name="size_guide_table">Size</string>
    <string name="size_s">S</string>
    <string name="size_m">M</string>
    <string name="size_l">L</string>
    <string name="size_waist">Waist</string>
    <string name="waist_s">64 cm</string>
    <string name="waist_m">68 cm</string>
    <string name="waist_l">72 cm</string>
    <string name="hip_s">90 cm</string>
    <string name="hip_m">94 cm</string>
    <string name="hip_l">98 cm</string>
    <string name="length_s">60 cm</string>
    <string name="length_m">62 cm</string>
    <string name="length_l">64 cm</string>
    <string name="size_hip">Hip</string>
    <string name="size_length">Length</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- RECOMMEND DUMMY DATA -->
    <string-array name="data_title">
        <item>Ahmad Dahlan</item>
        <item>Ahmad Yani</item>
        <item>Sutomo</item>
        <item>Gatot Soebroto</item>
        <item>Ki Hadjar Dewantara</item>
        <item>Mohammad Hatta</item>
        <item>Soedirman</item>
        <item>Soekarno</item>
    </string-array>

    <string-array name="data_price">
        <item>200,000,000</item>
        <item>200,000,000</item>
        <item>200,000,000</item>
        <item>200,000,000</item>
        <item>200,000,000</item>
        <item>200,000,000</item>
        <item>200,000,000</item>
        <item>200,000,000</item>
    </string-array>

    <string-array name="data_location">
        <item>Denpasar</item>
        <item>Denpasar</item>
        <item>Denpasar</item>
        <item>Denpasar</item>
        <item>Denpasar</item>
        <item>Denpasar</item>
        <item>Denpasar</item>
        <item>Denpasar</item>
    </string-array>

    <string-array name="data_star">
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/cat1</item>
        <item>@drawable/cat2</item>
        <item>@drawable/cat3</item>
        <item>@drawable/cat4</item>
        <item>@drawable/cat5</item>
        <item>@drawable/cat6</item>
        <item>@drawable/cat7</item>
        <item>@drawable/cat8</item>
    </integer-array>
</resources>