<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_wishlist"
        android:title="@string/title_wishlist" />

    <item
        android:id="@+id/navigation_capture"
        android:icon="@drawable/ic_capfits"
        android:title="@string/title_capfits" />

    <item
        android:id="@+id/navigation_transaksi"
        android:icon="@drawable/ic_transaksi"
        android:title="@string/title_transaksi" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_profil"
        android:title="@string/title_profil" />

</menu>