d<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:gravity="center_vertical"
        android:padding="28dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_radius"
        android:elevation="12dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/login_title"
            android:layout_marginTop="72dp"
            android:textColor="@color/black_font"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login_subtitle"
            android:textColor="@color/gray_font"
            android:textSize="16sp" />

        <com.anekoinda.storyapp.ui.customview.EmailEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="16sp" />

        <com.ayamgorengenak.capfits.customview.PasswordEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="#959494"
            android:textSize="16sp"
            app:passwordToggleEnabled="true"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/txtDaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtisDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/login_account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/buttonDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toEndOf="@+id/txtisDaftar"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/daftar"
                android:textColor="@color/black_font"
                android:textSize="16sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/black_font"
            android:gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>